--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
       <nav>
         <a href="./Home.php" class="nav-item">Home</a>
         <a href="./About.html" class="nav-item">About Us</a>
-        <a href="#" class="nav-item">FAQ</a>
+        <a href="./faq.html" class="nav-item">FAQ</a>
         <form method="post">
           <input class="nav-item logout" type="submit" name="logout" value="Logout">
         </form>
