Fixing Password hashing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>Sign In</h1>
           <div class="need-fix">
             <label for="email">Email</label>
-            <input type="text" id="username" name="username" />
+            <input type="email" id="username" name="username" required />
             <label for="password">Password</label>
             <input type="password" id="password" name="password" />
             <p><input type="checkbox" />Remember Me</p>
